--- a/modules/usercenter/leave.inc.html
+++ b/modules/usercenter/leave.inc.html
@@ -1,17 +1,17 @@
 <html>
   <div class="tabs-vertical">
     <ul class="tab-vertical-links">
-      <li class="active"><a href="#basedata">基本资料</a></li>
-      <li><a href="#modifypasswd">修改密码</a></li>
+      <li class="active"><a href="#leaveapply">请假申请</a></li>
+      <li><a href="#leavecheck">请假审核</a></li>
     </ul>
 
     <ul class="tab-vertical-content">
-      <div id="basedata" class="tab active">
-        <?php include('basedata.inc.html'); ?>
+      <div id="leaveapply" class="tab active">
+        <?php include('leaveapply.inc.html'); ?>
       </div>
 
-      <div id="modifypasswd" class="tab">
-        <?php include('modifypasswd.inc.html'); ?>
+      <div id="leavecheck" class="tab">
+        <?php include('leavecheck.inc.html'); ?>
       </div>
 
     </ul>
