Support to finish the leavecheck and LeaveManage is finished!

--- a/modules/usercenter/basedata.inc.html
+++ b/modules/usercenter/basedata.inc.html
@@ -11,7 +11,7 @@
     <table class="userdata_base_label">
       <tbody>
         <tr><th>员工ID:</th><td><?=$info['EmployeeID']?></td></tr>
-        <tr><th>用户名:</th><td><?=$_COOKIE['username']?></td></tr>
+        <tr><th>用户名:</th><td><?=$info['Name']?></td></tr>
         <tr><th>电子邮件:</th>
           <td>
             <label><?=$info['Email']?></label>
