--- a/modules/usercenter/leaveapply.inc.html
+++ b/modules/usercenter/leaveapply.inc.html
@@ -9,7 +9,8 @@
   <table class="userdata_base_label" border = "1">
     <tbody>
       <tr><td>总小时数</td><td>已用小时数</td><td>剩余小时数</td></tr>
-      <tr><td>80</td><td><?=(80 - $remainhours)?></td><td><?=$remainhours?></td></tr>
+      <tr><td>80</td><td><?=(80 - $remainhours)?></td><td>
+          <?=$remainhours?></td></tr>
     </tbody>
   </table>
 
