--- a/modules/usercenter/leaveapply.inc.html
+++ b/modules/usercenter/leaveapply.inc.html
@@ -8,10 +8,22 @@
   ?>
   <table class="userdata_base_label" border = "1">
     <tbody>
+      <?php
+         if ($remainhours >= 0 )
+         {
+         ?>
       <tr><td>总小时数</td><td>已用小时数</td><td>剩余小时数</td></tr>
       <tr><td>80</td><td><?=(80 - $remainhours)?></td><td>
           <?=$remainhours?></td></tr>
     </tbody>
+    <?php
+         }
+         else
+         {
+         ?>
+         <h2>无请假信息!</h2>
+         <?php } ?>
+
   </table>
 
   <script>
