Support to finish all info_search manager,Next is info_manager manager

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
       <h2>人事信息系统</h2>
       <hr/>
       <table>
-        <tr>
-          <h1><a href="info_search.php">人事信息查询系统</a></h1>
+        <tr colspan="2">
+          <img src="images/login_01.png" width="1037" height="605"/>
         </tr>
         <tr>
-          <h1><a href="info_manager.php">人事信息管理系统</a></h1>
+          <td align="left"><h1><a href="info_search.php">人事信息查询系统</a></h1></td>
+        </tr>
+        <tr>
+          <td align="right"><h1><a href="info_manager.php">人事信息管理系统</a></h1></td>
         </tr>
       </table>
       <hr/>
