--- a/modules/usercenter/minecenter.inc.html
+++ b/modules/usercenter/minecenter.inc.html
@@ -4,9 +4,7 @@
       <li class="active"><a href="#minedata">员薪资料管理</a></li>
       <li><a href="#leavemanager">请假管理</a></li>
       <li><a href="#attendmanager">考勤管理</a></li>
-      <li><a href="#overtimemanager">加班管理</a></li>
-      <li><a href="#paymanager">薪资管理</a></li>
-      <li><a href="#securemanager">安全管理</a></li>
+      <li><a href="#salarymanager">薪资管理</a></li>
     </ul>
 
     <div class="tab-content">
@@ -22,16 +20,8 @@
         <?php include('attend.inc.html'); ?>
       </div>
 
-      <div id="overtimemanager" class="tab">
-        <?php include('overtime.inc.html'); ?>
-      </div>
-
-      <div id="paymanager" class="tab">
-        <?php include('pay.inc.html'); ?>
-      </div>
-
-      <div id="securemanager" class="tab">
-        <?php include('secure.inc.html'); ?>
+      <div id="salarymanager" class="tab">
+        <?php include('salary.inc.html'); ?>
       </div>
     </div>
   </div>
