Add /modules/usercenter/salary.inc.html and salaryinfo.inc.html and finish info_search manager

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <hr/>
       <table>
         <tr colspan="2">
-          <img src="images/login_01.png" width="1037" height="605"/>
+          <img src="images/login_search.jpg" width="1037" height="605"/>
         </tr>
         <tr>
           <td align="left"><h1><a href="info_search.php">人事信息查询系统</a></h1></td>
