Support to finish the managercenter and finish the addStaff.inc.html, but I have not written Action

--- a/common/login_manager.inc.html
+++ b/common/login_manager.inc.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td>
-        <form method="post" action="<?=$rootdir?>/bootstrap.php/user/signin?frommobile=0" 
+        <form method="post" action="<?=$rootdir?>/bootstrap.php/user/hrsignin?frommobile=0" 
           enctype="multipart/form-data">
           <h4 class="nomargin">登录系统</h4>
 
