--- a/common/topnavbar_search.inc.html
+++ b/common/topnavbar_search.inc.html
@@ -17,7 +17,7 @@
                   <?php  
                   if (0 == $_COOKIE['login_status']) {
                   ?>
-                  <li>当前用户:</li>
+                  <li>当前无用户!</li>
                   <li class="divider">|</li>
                   <?php
                       } else {
