--- a/modules/hrcenter/addstaff.inc.html
+++ b/modules/hrcenter/addstaff.inc.html
@@ -36,7 +36,7 @@
   </div>
   <div>照 片:<input type = "file" name = "PhotoImage"/></div>
     <hr/>
-    <div><button  type = "submit">提交</button></div>
+    <div><button  class="btn btn-success btn-block" type = "submit">提交</button></div>
   </form>
 <script type="text/javascript" src="jsAddress.js"></script>
   <script type="text/javascript">
