Support to finish modifystaffAction

--- a/modules/hrcenter/staffdata.inc.html
+++ b/modules/hrcenter/staffdata.inc.html
@@ -2,7 +2,7 @@
   <div class="tabs-vertical">
     <ul class="tab-vertical-links">
       <li class="active"><a href="#addstaff">添加新员工</a></li>
-      <li><a href="#modfystaff">修改员工信息</a></li>
+      <li><a href="#modifystaff">修改员工信息</a></li>
       <li><a href="#deletestaff">删除员工信息</a></li>
       <li><a href="#searchstaff">搜索员工信息</a></li>
       <li><a href="#printstaff">打印员工报单</a></li>
@@ -15,27 +15,27 @@
         <?php include('addstaff.inc.html'); ?>
       </div>
 
-      <div id="modifystaff" class="tab active">
+      <div id="modifystaff" class="tab">
         <?php include('modifystaff.inc.html'); ?>
       </div>
 
-      <div id="deletestaff" class="tab active">
+      <div id="deletestaff" class="tab">
         <?php include('deletestaff.inc.html'); ?>
       </div>
 
-      <div id="searchstaff" class="tab active">
+      <div id="searchstaff" class="tab">
         <?php include('searchstaff.inc.html'); ?>
       </div>
 
-      <div id="printstaff" class="tab active">
+      <div id="printstaff" class="tab">
         <?php include('printstaff.inc.html'); ?>
       </div>
 
-      <div id="uploadpicture" class="tab active">
+      <div id="uploadpicture" class="tab">
         <?php include('uploadpicture.inc.html'); ?>
       </div>
 
-      <div id="modifypicture" class="tab active">
+      <div id="modifypicture" class="tab">
         <?php include('modifypicture.inc.html'); ?>
       </div>
 
