--- a/modules/usercenter/modifypasswd.inc.html
+++ b/modules/usercenter/modifypasswd.inc.html
@@ -5,7 +5,7 @@
       <tbody>
         <tr><th>用户名</th><td><?=$_COOKIE['username']?></td></tr>
         <tr><th>新密码</th>
-          <td><input type="password" name="password"
+          <td><input type="password" name="Password"
                 class="form-control uname"
                 placeholder="新密码"/></td>
         </tr>
