--- a/modules/hrcenter/addstaff.inc.html
+++ b/modules/hrcenter/addstaff.inc.html
@@ -1,45 +1,44 @@
 <html>
-<form method="post" action="<?=$rootdir?>/bootstrap.php/user/addstaff
-?frommobile=0&username=<?=$_COOKIE['username']?>">
-  <div>姓 名:<input type = "text" name = "Name"
-        class="form-control uname"
-        placeholder="姓名"/></div>
-  <div>
-    性 别:&nbsp;&nbsp;
-    <label>男<input type = "radio" name = "Sex" 
-        checked="checked" value="男"/></label>
-    <label>女<input type = "radio" name = "Sex" 
-                          value="女"/></label>
-  </div>
-  <div>登陆名:<input type = "text" name = "LoginName" 
-                          class="form-control uname"
-      placeholder="登录名"/></div>
-  <div>密 码:<input type = "text" name = "Password" 
-        class="form-control uname"
-      placeholder="密码"/></div>
-  <div>电 话:<input type = "text" name = "Telephone" 
-        class="form-control uname"
-      placeholder="电话"/></div>
-  <div>电子邮箱:<input type = "text" name = "Email" 
-        class="form-control uname"
-      placeholder="电子邮箱地址"/></div>
-  <div>
-    所属部门:
-    <select name = "DeptID" class="form-control uname">
-      <option value = "1">人事部</option>
-      <option value = "2">财务部</option>
-      <option value = "3">行政部</option>
-      <option value = "4">销售部</option>
-      <option value = "5">研发部</option>
-      <option value = "6">信息部</option>
-    </select>
-  </div>
-  <div>照 片:<input type = "file" name = "PhotoImage"/></div>
+  <form method="post" action="<?=$rootdir?>/bootstrap.php/user/addstaff?frommobile=0&username=<?=$_COOKIE['username']?>">
+  <table class="userdata_base_label" border = "1">
+    <tbody>
+    <tr>姓 名:</tr>
+    <tr><input type = "text" name = "Name"
+         class="form-control uname"
+         placeholder="姓名"/></tr>
+    <tr><div>性 别:
+      <label>男<input type = "radio" name = "Sex" 
+         checked="checked" value="男"/></label>
+      <label>女<input type = "radio" name = "Sex" 
+                           value="女"/></label>
+      </div></tr>
+    <tr>登陆名:<input type = "text" name = "LoginName" 
+                           class="form-control uname"
+                           placeholder="登录名"/></tr>
+    <tr>密 码:<input type = "text" name = "Password" 
+                           class="form-control uname"
+                           placeholder="密码"/></tr>
+    <tr>电 话:<input type = "text" name = "Telephone" 
+                           class="form-control uname"
+                           placeholder="电话"/></tr>
+    <tr>电子邮箱:<input type = "text" name = "Email" 
+                           class="form-control uname"
+                           placeholder="电子邮箱地址"/></tr>
+    <tr>
+      所属部门:
+      <select name = "DeptID" class="form-control uname">
+        <option value = "1">人事部</option>
+        <option value = "2">财务部</option>
+        <option value = "3">行政部</option>
+        <option value = "4">销售部</option>
+        <option value = "5">研发部</option>
+        <option value = "6">信息部</option>
+      </select>
+    </tr>
+    <tr>照 片:<input type = "file" name = "PhotoImage"/></tr>
     <hr/>
-    <div><button  class="btn btn-success btn-block" type = "submit">提交</button></div>
+    <tr><button  class="btn btn-success btn-block" type = "submit">提交</button></tr>
+    </tbody>
+  </table>
   </form>
-<script type="text/javascript" src="jsAddress.js"></script>
-  <script type="text/javascript">
-addressInit('province', 'city', 'area');
-  </script>
 </html>
