--- a/modules/hrcenter/staffdata.inc.html
+++ b/modules/hrcenter/staffdata.inc.html
@@ -2,8 +2,7 @@
   <div class="tabs-vertical">
     <ul class="tab-vertical-links">
       <li class="active"><a href="#addstaff">添加新员工</a></li>
-      <li><a href="#modifystaff">修改员工信息</a></li>
-      <li><a href="#deletestaff">删除员工信息</a></li>
+      <li><a href="#modifystaff">修改删除员工信息</a></li>
       <li><a href="#searchstaff">搜索员工信息</a></li>
       <li><a href="#printstaff">打印员工报单</a></li>
       <li><a href="#uploadpicture">上传员工照片</a></li>
@@ -17,10 +16,6 @@
 
       <div id="modifystaff" class="tab">
         <?php include('modifystaff.inc.html'); ?>
-      </div>
-
-      <div id="deletestaff" class="tab">
-        <?php include('deletestaff.inc.html'); ?>
       </div>
 
       <div id="searchstaff" class="tab">
