Support to finish searchstaffAction

--- a/common/topnavbar_manager.inc.html
+++ b/common/topnavbar_manager.inc.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+body{font-size:18px;}
+</style>
+<body>
 <html>
   <center>
       <h2>人事信息管理系统</h2>
@@ -45,3 +49,4 @@
     </div>
   </center>
 </html>
+</body>
